Edit Circuits-4 Post

--- a/_posts/Circuits/2023-04-25-Circuits-4.md
+++ b/_posts/Circuits/2023-04-25-Circuits-4.md
@@ -95,10 +95,10 @@ $$
 <br><br><br>
 
 ## 📚부울함수의 정규형
-
+부울함수의 정규형은 부울함수를 최소항의 합이나 최대항의 곱으로 표현한 것입니다. 그 외의 함수를 비정규형이라고 합니다. 최소항의 합 형태와 최대항의 곱 형태의 부울함수는 진리표와 1 : 1 관계로 하나만 존재합니다.
 
 ### 📄최소항과 최대항
-
+논리변수는 정상형(X) 또는 보수형($$ \overline{X} $$)으로 나타냅니다. 2개의 논리변수 X, Y가 논리곱(AND) 연산으로 묶인 경우 $$ XY, X\overline{Y}, \overline{X}Y, \overline{XY} $$ 와 같이 네 가지 조합이 가능합니다. 네 가지 조합의 곱 항을 논리변수 X, Y의 최소항이라고 합니다.
 
 ### 📄최소항의 합
 
