Edit Circuits-4 Post

--- a/_posts/Circuits/2023-04-25-Circuits-4.md
+++ b/_posts/Circuits/2023-04-25-Circuits-4.md
@@ -100,8 +100,20 @@ $$
 ### 📄최소항과 최대항
 논리변수는 정상형(X) 또는 보수형($$ \overline{X} $$)으로 나타냅니다. 2개의 논리변수 X, Y가 논리곱(AND) 연산으로 묶인 경우 $$ XY, X\overline{Y}, \overline{X}Y, \overline{XY} $$ 와 같이 네 가지 조합이 가능합니다. 네 가지 조합의 곱 항을 논리변수 X, Y의 최소항이라고 합니다.
 
-### 📄최소항의 합
+| X | Y | Z | 최소항| | 최대항 | |
+| | | | 항 | 표시 | 항 | 표시 |
+| :---: | :---: | :---: | :---: | :---: | :---: | :---: |
+| 0 | 0 | 0 | $$ \overline{XYZ} $$ | m<sub>0</sub> | $$ X + Y + Z $$ | M<sub>0</sub> |
+| 0 | 0 | 1 | $$ \overline{XY}Z $$ | m<sub>1</sub> | $$ X + Y + \overline{Z} $$ | M<sub>1</sub> |
+| 0 | 1 | 0 | $$ \overline{X}Y\overline{Z} $$ | m<sub>2</sub> | $$ X + \overline{Y} + Z $$ | M<sub>2</sub> |
+| 0 | 1 | 1 | $$ \overline{X}YZ $$ | m<sub>3</sub> | $$ X + \overline{Y} + \overline{Z} $$ | M<sub>3</sub> |
+| 1 | 0 | 0 | $$ X\overline{YZ} $$ | m<sub>4</sub> | $$ \overline{X} + Y + Z $$ | M<sub>4</sub> |
+| 1 | 0 | 1 | $$ X\overline{Y}Z $$ | m<sub>5</sub> | $$ \overline{X} + Y + \overline{Z} $$ | M<sub>5</sub> |
+| 1 | 1 | 0 | $$ XY\overline{Z} $$ | m<sub>6</sub> | $$ \overline{X} + \overline{Y} + Z $$ | M<sub>6</sub> |
+| 1 | 1 | 1 | $$ XYZ $$ | m<sub>7</sub> | $$ \overline{X} + \overline{Y} + \overline{Z} $$ | M<sub>7</sub> |
 
+### 📄최소항의 합
+부울함수에서 n개의 2진 변수는 최대 2<sup>2</sup>개의 서로 다른 최소항(AND 연산)으로 구성할 수 있고 구성된 최소항을 논리합(OR)으로 결합하여 부울함수로 표시할 수 있습니다.
 
 ### 📄최대항의 곱
 
