Edit Circuits-4 Post

--- a/_posts/Circuits/2023-04-25-Circuits-4.md
+++ b/_posts/Circuits/2023-04-25-Circuits-4.md
@@ -98,7 +98,7 @@ $$
 부울함수의 정규형은 부울함수를 최소항의 합이나 최대항의 곱으로 표현한 것입니다. 그 외의 함수를 비정규형이라고 합니다. 최소항의 합 형태와 최대항의 곱 형태의 부울함수는 진리표와 1 : 1 관계로 하나만 존재합니다.
 
 ### 📄최소항과 최대항
-논리변수는 정상형(X) 또는 보수형($$ \overline{X} $$)으로 나타냅니다. 2개의 논리변수 X, Y가 논리곱(AND) 연산으로 묶인 경우 $$ XY, X\overline{Y}, \overline{X}Y, \overline{XY} $$ 와 같이 네 가지 조합이 가능합니다. 네 가지 조합의 곱 항을 논리변수 X, Y의 최소항이라고 합니다.
+논리변수는 정상형(X) 또는 보수형($$ \overline{X} $$)으로 나타냅니다. 2개의 논리변수 X, Y가 논리곱(AND) 연산으로 묶인 경우 $$ XY, X\overline{Y}, \overline{X}Y, \overline{XY} $$ 와 같이 네 가지 조합이 가능합니다. 네 가지 조합의 곱 항을 논리변수 X, Y의 최소항이라고 합니다. n개의 변수는 2<sup>n</sup>개의 최소항을 형성합니다. 0부터 2<sup>n</sup>n - 1까지의 2진수 조합이 n개의 변수 밑에 기록되며 각 최소항은 n개의 변수에 관한 문자들을 논리곱으로 결합하는데 그 결과가 1이 되도록 결합합니다. 최대항도 최소항과 비슷하게 n개의 변수는 2<sup>n</sup>개가 형성됩니다. n개의 변수 값이 이루는 각각의 2진수 조합에 대해 각 변수에 관한 문자들을 논리합으로 결합하고 그 결과가 0이 되도록 결합하면 최대항을 얻을 수 있습니다.
 
 | X | Y | Z | 최소항| | 최대항 | |
 | | | | 항 | 표시 | 항 | 표시 |
@@ -112,19 +112,96 @@ $$
 | 1 | 1 | 0 | $$ XY\overline{Z} $$ | m<sub>6</sub> | $$ \overline{X} + \overline{Y} + Z $$ | M<sub>6</sub> |
 | 1 | 1 | 1 | $$ XYZ $$ | m<sub>7</sub> | $$ \overline{X} + \overline{Y} + \overline{Z} $$ | M<sub>7</sub> |
 
+<br><br>
+
 ### 📄최소항의 합
-부울함수에서 n개의 2진 변수는 최대 2<sup>2</sup>개의 서로 다른 최소항(AND 연산)으로 구성할 수 있고 구성된 최소항을 논리합(OR)으로 결합하여 부울함수로 표시할 수 있습니다.
+부울함수에서 n개의 2진 변수는 최대 2<sup>2</sup>개의 서로 다른 최소항(AND 연산)으로 구성할 수 있고 구성된 최소항을 논리합(OR)으로 결합하여 부울함수로 표시할 수 있습니다. 부울함수를 최소항의 합형태로 나타내려면 먼저 부울함수를 곱항의 합으로 전개합니다. 그리고 각 항이 모든 변수를 포함하고 있는지 확인하여 변수들이 빠져 있으면 모든 변수가 포함되도록 합니다.
+
+$$
+\begin{aligned}
+F &= X + Y\overline{Z} \\
+  &= X(Y + \overline{Y}) + (X + \overline{X})Y\overline{Z} \\
+  &= XY + X\overline{Y} + XY\overline{Z} + \overline{X}Y\overline{Z} \\
+  &= XY(Z + \overline{Z}) + X\overline{Y}(Z + \overline{Z}) + XY\overline{Z} + \overline{X}Y\overline{Z} \\
+  &= XYZ + XY\overline{Z} + X\overline{Y}Z + X\overline{YZ} + XY\overline{Z} + \overline{X}Y\overline{Z} \\
+  &= XYZ + XY\overline{Z} + X\overline{Y}Z + X\overline{YZ} + \overline{X}Y\overline{Z} \\
+\end{aligned}
+$$
+
+<br>
+
+위 부울함수를 최소항 표기를 이용하면 아래와 같이 표현할 수 있습니다.
+
+$$ F = m_7 + m_6 + m_5 + m_4 + m_2 $$
+
+또한 다음과 같이 나타낼 수도 있습니다.
+
+$$ F(X, Y, Z) = \sum m (2, 4, 5, 6, 7) $$
+
+<br><br>
 
 ### 📄최대항의 곱
+부울함수에서 n개의 논리변수는 최대 2<sup>n</sup>개의 서로 다른 최대항으로 구성할 수 있습니다. 여기서 필요한 최대항을 논리곱으로 결합하여 부울함수를 표현할 수 있습니다.부울함수를 최대항의 곱형태로 나타내려면 먼저 합항의 곱형태로 전개합니다.
 
+$$
+\begin{aligned}
+F &= XY + \overline{X}Z \\
+  &= (XY + \overline{X})(XY + Z) \\
+  &= (X + \overline{X})(Y + \overline{X})(X + Z)(Y + Z) \\
+  &= (\overline{X} + Y)(X + Z)(Y + Z) \\
+  &= (\overline{X} + Y + Z\overline{Z})(X + Y\overline{Y} + Z)(X\overline{X} + Y + Z) \\
+  &= (\overline{X} + Y + Z)(\overline{X} + Y + \overline{Z})(X + Y + Z)(X + \overline{Y} + Z)(X + Y + Z)(\overline{X} + Y + Z) \\
+  &= (X + Y + Z)(X + \overline{Y} + Z)(\overline{X} + Y + Z)(\overline{X} + Y + \overline{Z}) \\
+\end{aligned}
+$$
+
+위 부울함수를 최대항 표기를 이용하면 아래와 같이 표현할 수 있습니다.
+
+$$ F = M_0 \cdot M_2 \cdot M_4 \cdot M_5 $$
+
+또한 다음과 같이 나타낼 수도 있습니다.
+
+$$ F(X, Y, Z) = \prod M (0, 2, 4, 5) $$
+
+<br><br>
 
 ### 📄정규형 간의 관계
+최소항의 합으로 표시된 함수의 보수는 원래 함수에서 제외된 최소항들의 합입니다. 어떤 함수를 표현하는 최소항은 함수를 1로 하는데 비해 그것의 보수를 표현하는 최소항은 처음 함수를 0으로 합니다.
 
+$$ 
+\begin{aligned}
+F(X, Y, Z)  &= \sum m (2, 4, 5, 6, 7) \\
+            &= m_2 + m_4 + m_5 + m_6 + m_7
+\end{aligned}
+$$
+
+의 보수는
+
+$$ \overline{F}(X, Y, Z) = \sum m (0, 1, 3) = m_0 + m_1 + m_3 $$
+
+$$ \overline{F} $$ 를 드모르간의 법칙을 사용하여 보수를 취하면 최대항의 곱형태로 함수 F를 얻을 수 있습니다.
+
+$$
+\begin{aligned}
+F(X, Y, Z)  &= \overline{\overline{F}}(X, Y, Z) = \overline{\sum m (0, 1, 3)} \\
+            &= \overline{m_0 + m_1 + m_3} \\
+            &= \overline{m_0} \cdot \overline{m_1} \cdot \overline{m_3} \\
+            &= M_0 \cdot M_1 \cdot M_3 \\
+            &= \prod M (0, 1, 3) \\
+\end{aligned}
+$$
 
 <br><br><br>
 
 ## 📚부울함수의 표준형
+부울함수의 정규형은 진리표로부터 바로 얻을 수 있지만 최소항 또는 최대항에 항상 모든 변수가 포함되어 있어 부울함수 간소화에는 적합하지 않습니다. 부울함수 표준형 또한 부울함수를 표현하는 방법 가운데 하나입니다.
+
 ### 📄곱의 합
 
 
+<br><br>
+
 ### 📄합의 곱
+
+
+<br><br>
