Edit Circuits-4 Post

--- a/_posts/Circuits/2023-04-25-Circuits-4.md
+++ b/_posts/Circuits/2023-04-25-Circuits-4.md
@@ -115,7 +115,7 @@ $$
 <br><br>
 
 ### 📄최소항의 합
-부울함수에서 n개의 2진 변수는 최대 2<sup>2</sup>개의 서로 다른 최소항(AND 연산)으로 구성할 수 있고 구성된 최소항을 논리합(OR)으로 결합하여 부울함수로 표시할 수 있습니다. 부울함수를 최소항의 합형태로 나타내려면 먼저 부울함수를 곱항의 합으로 전개합니다. 그리고 각 항이 모든 변수를 포함하고 있는지 확인하여 변수들이 빠져 있으면 모든 변수가 포함되도록 합니다.
+부울함수에서 n개의 2진 변수는 최대 2<sup>n</sup>개의 서로 다른 최소항(AND 연산)으로 구성할 수 있고 구성된 최소항을 논리합(OR)으로 결합하여 부울함수로 표시할 수 있습니다. 부울함수를 최소항의 합형태로 나타내려면 먼저 부울함수를 곱항의 합으로 전개합니다. 그리고 각 항이 모든 변수를 포함하고 있는지 확인하여 변수들이 빠져 있으면 모든 변수가 포함되도록 합니다.
 
 $$
 \begin{aligned}
@@ -197,11 +197,31 @@ $$
 부울함수의 정규형은 진리표로부터 바로 얻을 수 있지만 최소항 또는 최대항에 항상 모든 변수가 포함되어 있어 부울함수 간소화에는 적합하지 않습니다. 부울함수 표준형 또한 부울함수를 표현하는 방법 가운데 하나입니다.
 
 ### 📄곱의 합
+논리함수를 간소화하려면 최소항의 합을 진리표로부터 구한 다음, 곱항의 수와 문자의 수를 줄일 수 있는지 여부를 따져 봐야합니다. 이렇게 하면 곱의 합형태로 간소화한 식을 구할 수 있습니다. 부울함수가 곱의 합형태가 아니라면 분배법칙을 이용하여 표준형으로 바꿀 수 있습니다.
 
+$$ F = AC + \overline{A}(B + C\overline{D}) $$
+
+위 부울함수를 곱의 합형태로 바꾸면 아래와 같습니다.
+
+$$ F = AC + \overline{A}(B + C\overline{D}) = AC + \overline{A}B + \overline{A}C\overline{D} $$
 
 <br><br>
 
 ### 📄합의 곱
+대수적으로 표현한 부울함수의 또 다른 표준형은 합의 곱형태로 합항들이 논리곱형태로 구성됩니다. 부울함수가 합의 곱형태가 아니라면 분배법칙을 이용하여 표준형으로 바꿀 수 있습니다.
 
+$$ F = AC + \overline{A}(B + C\overline{D}) $$
+
+위 부울함수를 합의 곱형태로 바꾸면 아래와 같습니다.
+
+$$
+\begin{aligned}
+F &= AC + \overline{A}(B + C\overline{D}) \\
+  &= (AC + \overline{A})(AC + B + C\overline{D}) \\
+  &= (A + \overline{A})(C + \overline{A})(A + B + C\overline{D})(C + B + C\overline{D}) \\
+  &= 1 \cdot (\overline{A} + C)(A + B + C)(A + B + \overline{D})(C + B + C)(C + B + \overline{D}) \\
+  &= (\overline{A} + C)(A + B + C)(A + B + \overline{D})(B + C)(B + C + \overline{D})
+\end{aligned}
+$$
 
 <br><br>
