--- a/_posts/Algorithm_Implementation/2023-04-12-PrimeNum.md
+++ b/_posts/Algorithm_Implementation/2023-04-12-PrimeNum.md
@@ -24,21 +24,24 @@ int main()
 {
     int count, num;
 
-    std::cin >> num;                  // 입력받은 num까지의 소수 구하기
+    std::cin >> num;
 
+    // 입력받은 num까지의 소수 구하기
     for(int i = 2; i <= num; ++i)
     {
         count = 0;
 
         for(int j = 2; j <= i; ++j)
         {
-            if(i % j == 0)            // i가 j로 나눠지면 count 1 증가. count가 2이상이면 소수가 아님
+            // i가 j로 나눠지면 count 1 증가. count가 2이상이면 소수가 아님
+            if(i % j == 0)
             {
                 ++count;
             }
         }
 
-        if(count == 1)                //  count가 1이면 i는 자기 자신으로만 나눠진다는 뜻이므로 해당 i는 소수
+        //  count가 1이면 i는 자기 자신으로만 나눠진다는 뜻이므로 해당 i는 소수
+        if(count == 1)
         {
             std::cout << i << " ";
         }
