--- a/_posts/OS/2023-05-02-Os-5.md
+++ b/_posts/OS/2023-05-02-Os-5.md
@@ -89,7 +89,7 @@ while(true)
 <br><br>
 
 ### 📄세마포어를 이용한 해결
-제1판독기-기록기 문제는 세마포어를 이용하여 해결 가능합니다. 세마포어 wrt와 mutex를 이용하고 두 세마포어 초기값은 모두 1로 둡니다.
+제1판독기-기록기 문제는 세마포어를 이용하여 해결 가능합니다. 2개의 세마포어 wrt와 mutex를 이용하고 두 세마포어 초기값은 모두 1로 둡니다.
 
 ```c
 // 기록기
@@ -110,6 +110,43 @@ P(mutex);
 rcount = rcount - 1;
 if(rcount == 0) then V(wrt);
 V(mutex);
+```
+
+<br>
+
+제2판독기-기록기 문제 또한 세마포어를 이용하여 해결 가능합니다. 5개의 세마포어 wrt와 mutex를 이용하고 rd, wrt, mutex1, mutex2, mutex3의 초기값은 모두 1로 둡니다. 일반 변수 rcount와 wcount의 초기값은 0입니다. 기록기가 대기 중일 때 새로운 판독기가 들어오면 임계영역을 수행하지 못하도록 rd가 제1판독기-기록기 코드에 추가되었습니다. 기록기에 우선순위를 주기 위해 mutex3도 추가되었습니다.
+
+```c
+// 기록기
+
+P(mutex2);
+wcount = wcount + 1;
+if(wcount == 1) then P(rd);
+V(mutex2);
+P(wrt);
+공유자원에 쓰기
+V(wrt);
+P(mutex2);
+wcount = wcount - 1;
+if(wcount == 0) then V(rd);
+V(mutex2);
+
+
+// 판독기
+
+P(mutex3);
+P(rd);
+P(mutex1);
+rcount = rcount + 1;
+if(rcount == 1) then P(wrt);
+V(mutex1);
+V(rd);
+V(mutex3);
+공유자원에서 읽기
+P(mutex1);
+rcount = rcount - 1;
+if(rcount == 0) then V(wrt);
+V(mutex1);
 ```
 
 <br><br><br>
