Edit Cpp-OOP Post

--- a/_posts/Cpp/2023-05-06-Cpp-OOP.md
+++ b/_posts/Cpp/2023-05-06-Cpp-OOP.md
@@ -10,7 +10,7 @@ tags:
 toc: true
 toc_sticky: true
 
-date: 2023-05-05
+date: 2023-05-06
 ---
 
 ## 📚절차적 프로그래밍
@@ -63,10 +63,11 @@ coco.Jump();
 <br><br><br>
 
 ## 📚C++ 클래스
-| 언어 | 상태(State) | 행동(Behavior) |
+
+| 언어 | 상태(State) | 행동\(Behavior\) |
 | :---: | :---: | :---: |
 | C++ | 멤버변수 | 멤버함수 |
-| C# | 필드, 속성 | 메소드 |
+| C# | 필드 / 속성 | 메소드 |
 
 <br><br><br>
 
