--- a/_posts/Circuits/2023-05-08-Circuits-5.md
+++ b/_posts/Circuits/2023-05-08-Circuits-5.md
@@ -31,4 +31,74 @@ date: 2023-05-08
 <br><br><br>
 
 ## 📚카르노도표 방법
-카르노도표는 진리표를 다이어그램 모양으로 나타낸 것입니다. 여러 개의 사각형으로 이루어진 다이어그램이고 사각형은 각각 하나의 최소항 또는 최대항을 나타냅니다. 도표 안의 면적을 가지고 직관적으로 부울함수를 간소화할 수 있습니다. 카르노도표는 부울함수의 입력변수 수에 따라 그 형태가 달라집니다. 입력변수의 수가 n인 경우, n변수 카르노도표라고 하며 2<sup>n</sup>개의 사각형으로 구성됩니다. 카르노도표를 이용하여 부울함수를 간소화할 때 부울함수를 정규형 부울함수로 변형한 다음 카르노도표를 이용하여 표준형으로 표시합니다.
+카르노도표는 진리표를 다이어그램 모양으로 나타낸 것입니다. 여러 개의 사각형으로 이루어진 다이어그램이고 사각형은 각각 하나의 최소항 또는 최대항을 나타냅니다. 도표 안의 면적을 가지고 직관적으로 부울함수를 간소화할 수 있습니다. 카르노도표는 부울함수의 입력변수 수에 따라 그 형태가 달라집니다. 입력변수의 수가 n인 경우, n변수 카르노도표라고 하며 2<sup>n</sup>개의 사각형으로 구성됩니다. 카르노도표를 이용하여 부울함수를 간소화할 때 부울함수를 정규형(최소항의 합형태, 최대항의 곱형태) 부울함수로 변형한 다음 카르노도표를 이용하여 표준형(곱의 합형태, 합의 곱형태)으로 표시합니다.
+
+* 최소항의 합형태를 곱의 합형태로 간소화
+  1. 입력변수의 수 n에 따라 n변수 카르노도표 작성. 2<sup>n</sup>개의 정사각형으로 구성.
+  2. 정규형 부울함수의 최소항의 인덱스에 대응되는 도표 안의 사각형을 1로 표시.
+  3. 1로 표시된 사각형 중 서로 인접한 사각형끼리 묶음. 한 묶음은 크게, 전체 묶음의 수는 작게 묶음.
+  4. 각 묶음이 입력변수 각각에 대해 도표의 어느 위치에 있는지 파악. 묶음이 입력변수 X에 대해 X = 1인 곳에만 존재한다면 곱항에 X를 남기고, X = 0인 곳에만 존재한다면 곱항에 $$ \overline{X} $$를 남기고, X = 0인 곳과 X = 1인 곳에 걸쳐서 존재한다면 곱항에서 X를 소거.
+  5. 4에서 구한 각 묶음에 대한 곱항을 논리합(OR)으로 연결시켜 간소화된 표준형을 구함.
+
+<br>
+
+* 최대항의 곱형태를 합의 곱형태로 간소화
+  1. 입력변수의 수 n에 따라 n변수 카르노도표 작성. 2<sup>n</sup>개의 정사각형으로 구성.
+  2. 정규형 부울함수 최대항의 인덱스에 해당하는 도표 안의 사각형을 0으로 표시.
+  3. 0으로 표시된 사각형 중 서로 인접한 사각형끼리 묶음. 한 묶음은 크게, 전체 묶음의 수는 작게 묶음.
+  4. 각 묶음이 입력변수 각각에 대해 도표의 어느 위치에 있는지 파악. 묶음이 입력변수 X에 대해 X = 1인 곳에만 존재한다면 합항에 $$ \overline{X} $$를 남기고, X = 0인 곳에만 존재한다면 합항에 X를 남기고, X = 0인 곳과 X = 1인 곳에 걸쳐서 존재한다면 합항에서 X를 소거.
+  5. 4에서 구한 각 묶음에 대한 곱항을 논리곱(AND)으로 연결시켜 간소화된 표준형을 구함.
+
+<br>
+
+* 인접 사각형
+카르노도표에서 각 정사각형은 하나의 최소항입니다. 입력변수 X, Y, Z인 경우 최소항 $$ m_{4} = X\overline{YZ} $$와 $$ m_{6} = XY\overline{Z} $$는 카르노도표 안에 2개의 정사각형을 의미합니다.
+
+위 두 최소항을 더하면 $$ m_{4} + m_{6} = X\overline{YZ} + XY\overline{Z} = X\overline{Z}(\overline{Y} + Y) = X\overline{Z} $$로 간소화됩니다.
+
+두 정사각형에 대응되는 각 최소항의 구성문자 중 다른 모든 문자는 서로 동일하되 오직 하나의 문자만 서로 보수관계에 있을 때 서로 인접하다고 정의합니다.
+
+* 인접 사각형끼리 묶는 방법
+  1. 한 묶음 내의 정사각형 수는 2<sup>n</sup>개가 되도록 묶는다.
+  2. 한 묶음은 크게, 전체 묶음의 수는 작게 묶는다.
+  <br><br>
+  한 묶음 안의 정사각형 수는 1개, 2개, 4개, 8개, ... 등으로 묶어야 합니다.
+  <br>
+  한 묶음을 크게 묶으면 곱항 내의 문자의 수가 줄어들고, 전체 묶음의 수를 작게 묶으면 곱항의 수가 줄어듭니다. 곱항 안에서 문자 수가 줄어들면 AND 연산 수 또는 AND 연산의 입력수가 줄어들고, 곱항의 수가 줄어들면 OR 연산 수 또는 OR 연산 입력수가 줄어듭니다.
+
+<br>
+
+### 📄2변수 카르노도표
+2개 변수를 가지는 부울함수는 4개의 최소항이 있습니다. 2변수 카르노도표는 4개의 정사각형을 구성됩니다.
+
+<br>
+
+### 📄3변수 카르노도표
+
+
+<br>
+
+### 📄4변수 카르노도표
+
+
+<br>
+
+### 📄5변수 카르노도표
+
+
+<br>
+
+### 📄6변수 카르노도표
+
+
+<br>
+
+### 📄무관조건
+
+
+<br>
+
+### 📄기타 카르노도표
+
+
+<br><br>
