Edit Circuits-5 Post

--- a/_posts/Circuits/2023-05-08-Circuits-5.md
+++ b/_posts/Circuits/2023-05-08-Circuits-5.md
@@ -69,36 +69,83 @@ date: 2023-05-08
 <br>
 
 ### 📄2변수 카르노도표
-2개 변수를 가지는 부울함수는 4개의 최소항이 있습니다. 2변수 카르노도표는 4개의 정사각형을 구성됩니다.
+2개 변수를 가지는 부울함수는 4개의 최소항이 있습니다. 2변수 카르노도표는 4개의 정사각형을 구성됩니다. 0과 1을 기입한 도표의 왼쪽 면과 윗면은 각각 변수 x<sub>1</sub>과 x<sub>2</sub>의 값을 나타냅니다. 2변수 부울함수는 도표에서 함수의 최소항에 해당하는 정사각형을 1로 표시하여 나타낼 수 있습니다.
+
+아래 도표를 보면 인접 사각형끼리 묶여 있습니다. 이를 도표 간소화 방법에 따라 간소화 해보겠습니다.
+
+1. 가로로 묶여 있는 인접 사각형을 보면 입력 변수 x<sub>1</sub>에 대해 x<sub>1</sub> = 0인 곳에만 존재하기 때문에 곱항에서 $$ \overline{x_{1}} $$를 남기고, 입력 변수 x<sub>2</sub>에 대해 x<sub>2</sub> = 0과 x<sub>2</sub> = 1인 곳에 걸쳐있기 때문에 곱항에서 x<sub>2</sub>변수는 소거합니다.
+2. 세로로 묶여 있는 인접 사각형은 입력 변수 x<sub>1</sub>에 대해 x<sub>1</sub> = 0과 x<sub>1</sub> = 1인 곳에 걸쳐있기 때문에 곱항에서 x<sub>1</sub>변수는 소거하고, 입력 변수 x<sub>2</sub>에 대해 x<sub>2</sub> = 1인 곳에만 존재하기 때문에 곱항에서 $$ x_{2} $$를 남깁니다.
+3. 각 묶음에 대한 곱항을 논리합(OR)으로 연결시킵니다.
+
+위 방법대로 2변수 카르노도표를 간소화하면 다음과 같습니다.
+
+$$ f = \overline{x_{1}} + x_{2} $$
+
+![2VarKmap](\assets\images\Circuits\Kmap2Var.png){: width="400" height="400"}
+<br>
+[https://www.oreilly.com/library/view/introduction-to-digital/9780470900550/chap6-sec004.html](https://www.oreilly.com/library/view/introduction-to-digital/9780470900550/chap6-sec004.html)
+
+<br>
+
+위 도표를 대수적으로 간소화하면 다음과 같습니다.
+
+$$ 
+\begin{aligned}
+f &= \overline{x_{1}x_{2}} + \overline{x_{1}}x_{2} + x_{1}x_{2} \\
+  &= \overline{x_{1}}(\overline{x_{2}} + x_{2}) + x_{1}x_{2} \\
+  &= \overline{x_{1}} + x_{1}x_{2} \\
+  &= (\overline{x_{1}} + x_{1})(\overline{x_{1}} + x_{2}) \\
+  &= \overline{x_{1}} + x_{2}
+\end{aligned}
+$$
 
 <br>
 
 ### 📄3변수 카르노도표
+3변수 카르노 도표는 8개의 정사각형으로 구성됩니다. 왼쪽 면 A값으로 윗면은 B,C 값을 나타냅니다. 여기서 B와 C의 값이 순차적이지 아닌 점에서 주의해야 합니다. B, C값이 00, 01, 10, 11이 아닌 이유는 인접 사각형 정의에 의해 인접한 사각형 최소항의 구성 문자 중 다른 모든 문자는 서로 동일하되 오직 하나의 문자만 서로 보수 관계에 있어야 하기 때문입니다.
 
+![3VarKmap](\assets\images\Circuits\Kmap3Var.png){: width="400" height="400"}
+<br>
+[https://www.geeksforgeeks.org/introduction-of-k-map-karnaugh-map/](https://www.geeksforgeeks.org/introduction-of-k-map-karnaugh-map/)
 
 <br>
 
 ### 📄4변수 카르노도표
 
+![4VarKmap](\assets\images\Circuits\Kmap4Var.png){: width="400" height="400"}
+<br>
+[https://www.geeksforgeeks.org/introduction-of-k-map-karnaugh-map/](https://www.geeksforgeeks.org/introduction-of-k-map-karnaugh-map/)
 
 <br>
 
 ### 📄5변수 카르노도표
 
+![5VarKmap](\assets\images\Circuits\Kmap5Var.png){: width="400" height="400"}
+<br>
+[https://www.electricaltechnology.org/2018/05/karnaugh-map-k-map.html](https://www.electricaltechnology.org/2018/05/karnaugh-map-k-map.html)
 
 <br>
 
 ### 📄6변수 카르노도표
 
+![6VarKmap](\assets\images\Circuits\Kmap6Var.png){: width="400" height="400"}
+<br>
+[https://www.electricaltechnology.org/2018/05/karnaugh-map-k-map.html](https://www.electricaltechnology.org/2018/05/karnaugh-map-k-map.html)
 
 <br>
 
 ### 📄무관조건
+디지털 논리회로에서 진리표는 입력변수의 조합에 따라 함수값이 0 또는 1을 가집니다. 함수값이 1인 입력변수를 논리곱 연산의 항으로 표시한 것이 최소항이고, 이런 최소항들을 논리합 연산으로 결합한 것이 최소항의 합 형태의 정규형 부울함수 입니다. 함수값은 일정한 입력변수의 조합에서 언제나 일정한 출력값을 가집니다. 하지만 어떤 논리회로에서는 입력변수 조합에 따라 함수값이 발생하지 않는 경우, 출력값이 일정한 값이 되지 않는 경우도 있습니다.
 
+BCD 코드는 2진수 네 자리로 모든 10진수를 2진수로 표현합니다. 하지만 2진수의 4비트, 16개의 조합에서 10개만 숫자표현에 사용하고 나머지 6개 비트 조합은 사용되지 않습니다. 여기서 6개의 사용되지 않는 비트 조합에 대해서 무관하게 논리회로를 구성하기 때문에 이 입력변수 조합들에 대한 함수 출력값은 어떤 값을 가지더라도 무관합니다. 이런 조건을 **무관조건**이라고 합니다. 무관조건은 함수를 더 간소화하는데 사용됩니다.
 
 <br>
 
 ### 📄기타 카르노도표
+* XOR 카르노도표
+
+
+* XNOR 카르노도표
 
 
 <br><br>
