--- a/_posts/Discrete/2023-05-13-Discrete-9.md
+++ b/_posts/Discrete/2023-05-13-Discrete-9.md
@@ -20,15 +20,20 @@ date: 2023-05-13
 * 평면 그래프
 <br>
 
-![PlanarGraph](\assets\images\DiscreteMath\PlanarGraph.jpeg)
+![PlanarGraph](\assets\images\DiscreteMath\PlanarGraph.jpeg){: width="350", height="350"}
+<br>
+[https://www.geeksforgeeks.org/mathematics-planar-graphs-graph-coloring/](https://www.geeksforgeeks.org/mathematics-planar-graphs-graph-coloring/)
 
 <br>
 
 * 평면 그래프가 아닌 것
 <br>
 
-![PetersenGraph](\assets\images\DiscreteMath\PetersenGraph.png)
-![K33Graph](\assets\images\DiscreteMath\K33Graph.png)
+![PetersenGraph](\assets\images\DiscreteMath\PetersenGraph.png){: width="150", height="150"}
+![K33Graph](\assets\images\DiscreteMath\K33Graph.png){: width="150", height="150"}
+<br>
+[https://en.wikipedia.org/wiki/Planar_graph](https://en.wikipedia.org/wiki/Planar_graph)
+
 
 <br><br>
 
@@ -42,12 +47,24 @@ date: 2023-05-13
 ### 📄4색정리
 평면 그래프가 주어졌을 때, 각 꼭지점에 대해 인접한 꼭지점과 다른 색으로 칠하는데 필요한 색은 네 가지면 충분하다는 정리입니다.
 
+![FourColourPlanarGraph](\assets\images\DiscreteMath\FourColourPlanarGraph.png){: width="500", height="500"}
+<br>
+[https://en.wikipedia.org/wiki/Four_color_theorem](https://en.wikipedia.org/wiki/Four_color_theorem)
+
 <br><br>
 
 ### 📄오일러 트레일, 오일러 투어
 그래프의 모든 변을 각각 한 번만 지나는 트레일을 **오일러 트레일**이라고 합니다. 그래프의 모든 변을 오직 한 번만 지나기 때문에 '한붓그리기'라고도 부릅니다.
 
+![EulerianTrail](\assets\images\DiscreteMath\EulerianTrail.png){: width="400", height="400"}
+
+<br>
+
 **오일러 투어**는 시작점과 종점이 동일한 오일러 트레일입니다. 또한 오일러 투어는 닫힌 오일러 트레일로서 시작점에서 출발해서 모든 변을 한 번씩만 지나 처음으로 되돌아오는 그래프 탐색 방법입니다. 오일러 투어는 오일러 사이클, 오일러 회로라고도 부릅니다. 오일러 투어를 갖는 그래프를 오일러 그래프라고 합니다.
+
+![EulerianCycle](\assets\images\DiscreteMath\EulerianCycle.png){: width="400", height="400"}
+<br>
+[https://www.geeksforgeeks.org/eulerian-path-and-circuit/](https://www.geeksforgeeks.org/eulerian-path-and-circuit/)
 
 <br>
 
@@ -57,7 +74,19 @@ date: 2023-05-13
 <br><br>
 
 ### 📄해밀턴 경로, 해밀턴 사이클
-그래프의 모든 꼭지점을 각각 한 번씩만 지나는 경로를 **해밀턴 경로**라고 합니다. **해밀턴 사이클**은 시작점과 종점이 동일한 해밀턴 경로입니다.
+그래프의 모든 꼭지점을 각각 한 번씩만 지나는 경로를 **해밀턴 경로**라고 합니다.
+
+![HamiltonianPath](\assets\images\DiscreteMath\HamiltonianPath.png){: width="300", height="300"}
+
+<br>
+
+**해밀턴 사이클**은 시작점과 종점이 동일한 해밀턴 경로입니다.
+
+![HamiltonianCycle](\assets\images\DiscreteMath\HamiltonianCycle.png){: width="300", height="300"}
+<br>
+[https://en.wikipedia.org/wiki/Hamiltonian_path](https://en.wikipedia.org/wiki/Hamiltonian_path)
+
+<br>
 
 지나는 모든 변이 서로 다르면 **트레일**, 지나는 모든 꼭지점이 다르면 **경로**라고 합니다.
 
@@ -65,11 +94,12 @@ date: 2023-05-13
 
 ## 📚그래프의 활용
 ### 📄가중 그래프
-그래프 각 변에 실수가 붙여진 그래프를 **가중 그래프**라고 합니다. 변에 부여된 값은 **가중치**라고 합니다.
+그래프 각 변에 실수가 붙여진 그래프를 **가중 그래프**라고 합니다. 변에 부여된 값은 **가중치**라고 합니다. 가중 그래프는 그래프 이론은 활용한 많은 이론에서 응용됩니다.
 
-<br><br>
+<br>
 
 ### 📄최단경로 문제
+출발지와 목적지를 정해 주었을 때, 어떤 경로가 가장 짧은 거리인지 찾는 문제입니다. 에츠허르 다익스트라(Edsger Dijkstra)라는 컴퓨터 과학자는 어떤 변도 음수값의 가중치를 갖지 않는 방향 그래프에서 주어진 출발점과 도착점 사이의 최단경로를 찾아주는 알고리즘을 고안해 냈습니다.
 
 다익스트라 유사코드
 ```cpp
@@ -99,5 +129,13 @@ function Dijkstra(G, w, S)
 
 ### 📄교착상태 찾기
 둘 이상의 프로세스가 서로 상대방의 프로세스 결과를 무한정 기다리는 상황을 의미합니다.
+
+교착상태를 발견하는 방법은 방향 그래프에서 방향 사이클을 발견하는 알고리즘과 동일합니다.
+
+1. 진출 차수가 0인 꼭지점을 찾는다.
+2. 진출 차수가 0인 꼭지점에 들어오는 변을 모두 제거한다.
+3. 진입 차수가 0인 꼭지점을 찾는다.
+4. 진입 차수가 0인 꼭지점에서 밖으로 나가는 변을 모두 제거한다.
+5. 남아 있는 꼭지점이 방향 사이클에 포함되는지 판단한다.
 
 <br><br>
