Edit Discrete Posts

--- a/_posts/Discrete/2023-05-13-Discrete-9.md
+++ b/_posts/Discrete/2023-05-13-Discrete-9.md
@@ -71,6 +71,16 @@ date: 2023-05-13
 ### 📄오일러 그래프 정리
 연결 그래프가 오일러 투어를 가진다면 그래프의 모든 꼭지점의 차수가 짝수입니다.
 
+그래프 G = (V, E)는 연결 그래프이고 모든 꼭지점의 차수는 짝수라 가정할 때 G의 오일러 투어는 아래의 알고리즘을 통해 구할 수 있습니다.
+
+1. G의 임의의 꼭지점 v를 고른다.
+2. v에서 시작하고 v에서 끝나는 임의의 사이클 C를 선택한다.
+3. C가 오일러 투어이면 증명을 끝낸다. 아니라면 아래 과정을 반복한다.
+4. G에서 C에 속하는 모든 변을 제거하고 새로운 G'을 만든다.
+5. C와 G'가 공유하는 꼭지점 중 하나를 고르고 w라고 한다.
+6. G'에서 w로부터 시작하여 w에서 끝나는 임의의 사이클 C'를 선택한다.
+7. 기존의 C와 새로 선택된 C'를 합쳐서 새로운 C를 만든다.
+
 <br><br>
 
 ### 📄해밀턴 경로, 해밀턴 사이클
