Edit Circuits-5 Post

--- a/_posts/Circuits/2023-05-08-Circuits-5.md
+++ b/_posts/Circuits/2023-05-08-Circuits-5.md
@@ -168,6 +168,7 @@ $$
 <br>
 
 * XNOR 카르노도표
-
+<br>
+XNOR 카르노도표는 XOR 카르노 도표에서 0과 1을 뒤바꿔서 그리면 되고, XNOR 논리도는 XOR 논리도의 출력에 NOT 게이트를 추가하면 됩니다.
 
 <br><br>
