Edit UE4-BullCow-FString Text Macro

--- a/_posts/UE4_BullCow/2023-07-13-FString.md
+++ b/_posts/UE4_BullCow/2023-07-13-FString.md
@@ -49,7 +49,7 @@ void UBullCowCartridge::BeginPlay() // When the game starts
 {
     Super::BeginPlay();
 
-    FString HiddenWord = "Bulls";
+    FString HiddenWord = TEXT("Bulls");
 
     // 사용자 지정 함수 PrintLine()에
     // FString::Printf가 포함되어 있어서 생략 가능합니다.
@@ -69,7 +69,7 @@ void UBullCowCartridge::BeginPlay() // When the game starts
 FString 클래스의 Printf 함수를 사용하여 문자열 변수를 출력하고자 할 때 C언어의 표준 출력 함수인 printf() 함수를 사용하는 것 처럼 출력 양식과 출력 양식 변환기호를 사용해야 합니다.
 
 ```cpp
-FString Word = "word";
+FString Word = TEXT("word");
 int32 num = 1; // int 대신 int32 사용
 
 FString::Printf(TEXT("문자열: %s, 정수: %i"), *Word, num);
