Edit ScoreUI Post

--- a/_posts/UE4_TopDownShooting/2023-08-10-ScoreUI.md
+++ b/_posts/UE4_TopDownShooting/2023-08-10-ScoreUI.md
@@ -15,11 +15,13 @@ date: 2023-08-10
 
 ## 🎮점수 UI 제작
 ### ⚙️점수 누적 함수
-UMG 모듈 시스템을 이용해 점수 출력 위젯을 C++로 구현하고 위젯 설정창에서 시작적 배치를 하였습니다. 게임 규칙에 관한 기능은 게임 모드 베이스에 구현하는게 좋습니다. 게임 모드 베이스 클래스 헤더 파일에 현재 점수를 저장할 변수와 점수를 증가시킬 함수를 선언합니다.
+UMG 모듈 시스템을 이용해 점수 출력 위젯을 C++로 구현하고 위젯 설정창에서 시각적 배치를 하였습니다. 게임 규칙에 관한 기능은 게임 모드 베이스에 구현하는게 좋습니다. 게임 모드 베이스 클래스 헤더 파일에 현재 점수를 저장할 변수와 점수를 증가시킬 함수를 선언합니다.
 
 점수를 증가시키는 함수는 public으로 설정하여 외부 클래스에서 접근할 수 있도록 하고 함수를 통해 점수를 증가만 시킬 수 있게 합니다. 하지만 현재 점수는 외부 클래스에서 마음대로 수정할 수 없도록 private으로 설정합니다.
 
 ```cpp
+// ShootingSampleGameModeBase.h
+
 #pragma once
 
 #include "CoreMinimal.h"
@@ -43,6 +45,55 @@ protected:
 private:
 	int32 currentScore = 0;
 };
+```
+
+<br>
+
+게임 모드 베이스 클래스의 소스 파일에서 AddScore 함수를 구현합니다. 정수형 매개변수 point를 통해 넘겨받은 점수를 현재 점수에 누적합니다.
+
+```cpp
+// ShootingSampleGameModeBase.cpp
+
+#include "ShootingSampleGameModeBase.h"
+
+void AShootingSampleGameModeBase::AddScore(int32 point)
+{
+	currentScore += point;
+}
+```
+
+<br>
+
+점수가 추가되는 상황은 플레이어의 총알이 적 액터와 충돌하는 상황입니다. 따라서 총알 충돌 기능을 구현했던 Bullet 클래스에 점수 추가 기능을 구현하면 됩니다.
+
+```cpp
+// Bullet.cpp
+
+void ABullet::OnBulletOverlapEnemy(UPrimitiveComponent* OverlappedComponent, AActor* OtherActor,
+	UPrimitiveComponent* OtherComp, int32 OtherBodyIndex,
+	bool bFromSweep, const FHitResult& SweepResult)
+{
+	AEnemyActor* enemy = Cast<AEnemyActor>(OtherActor);
+
+	if (enemy != nullptr)
+	{
+		enemy->Destroy();
+
+		// 현재 게임 모드 가져옴
+		AGameModeBase* currentMode = GetWorld()->GetAuthGameMode();
+		// AShootingSampleGameModeBase 클래스로 변환
+		AShootingSampleGameModeBase* currentGameModeBase = Cast<AShootingSampleGameModeBase>(currentMode);
+
+		// 게임 모드 베이스를 가져왔다면
+		if (currentGameModeBase != nullptr)
+		{
+			// 게임 모드 베이스의 점수 1점 추가
+			currentGameModeBase->AddScore(1);
+		}
+	}
+
+	Destroy();
+}
 ```
 
 <br><br>
