--- a/_posts/UE4_TopDownShooting/2023-08-10-ScoreUI.md
+++ b/_posts/UE4_TopDownShooting/2023-08-10-ScoreUI.md
@@ -97,3 +97,46 @@ void ABullet::OnBulletOverlapEnemy(UPrimitiveComponent* OverlappedComponent, AAc
 ```
 
 <br><br>
+
+### ⚙️UMG 모듈 추가
+언리얼 모션 그래픽 UI 디자이너(UMG)는 게임 내 HUD, 메뉴, 기타 인터페이스 관련 그래픽 요소로 사용자에게 보여주고 싶은 것들을 만들어 사용할 수 있도록 하는 비주얼 UI 제작 툴입니다.
+
+UMG의 핵심에 Widget이라는 것이 있는데, 이는 미리 만들어진 (버튼, 체크박스, 슬라이더, 진행상황 바 등의) 함수 시리즈로, 이들을 조립해서 UI를 만들 수 있습니다. 이러한 위젯은 전용 Widget Blueprint (위젯 블루프린트)에서 편집됩니다.
+
+UMG 기능은 블루프린트 모듈로 따로 분리되어 있어 C++ 코드에서 사용하기 위해 모듈을 등록해야 합니다. 비주얼 스튜디오 솔루션 탐색기에서 프로젝트이름.build.cs 파일을 열어 UMG 모듈을 추가해 줍니다.
+
+💡모듈
+<br>
+엔진은 대규모 모듈 모음으로 구현되며 게임은 모듈을 보강하기 위해 자체 모듈을 제공합니다. 각 모듈은 일련의 기능을 캡슐화하고 다른 모듈에서 사용할 공용 인터페이스 및 컴파일 환경을 제공할 수 있습니다.
+<br><br>
+모듈은 확장자가 .build.cs인 C# 소스 파일을 통해 선언되며 프로젝트의 소스 디렉터리 아래에 저장됩니다. 모듈에 속하는 C++ 소스 코드는 .build.cs 파일 옆이나 하위 디렉토리에 저장됩니다.
+<br><br>
+각 .build.cs 파일은 ModuleRules 기본 클래스에서 파생되는 클래스를 선언하고 생성자에서 빌드해야 하는 방법을 제어하는 ​​속성을 설정합니다. 이 .build.cs 파일은 UnrealBuildTool에 의해 컴파일되고 전체 컴파일 환경을 결정하도록 구성됩니다.
+{: .notice--warning}
+
+PublicDependencyModuleNames는 외부 모듈 파일을 프로젝트에 포함시키는 속성입니다.
+
+```cpp
+// Copyright Epic Games, Inc. All Rights Reserved.
+
+using UnrealBuildTool;
+
+public class ShootingSample : ModuleRules
+{
+	public ShootingSample(ReadOnlyTargetRules Target) : base(Target)
+	{
+		PCHUsage = PCHUsageMode.UseExplicitOrSharedPCHs;
+	
+		PublicDependencyModuleNames.AddRange(new string[] { "Core", "CoreUObject", "Engine", "InputCore", "UMG" });
+
+		PrivateDependencyModuleNames.AddRange(new string[] {  });
+	}
+}
+```
+
+<br><br>
+
+### ⚙️UserWidget 클래스 생성
+점수가 누적되는 것을 게임 화면에서 보기 위해 UI 위젯을 제작합니다. UI를 만들기 위해 부모 클래스는 위젯 베이스 클래스인 UserWidget 클래스가 필요합니다. 클래스 생성 버튼을 눌러 UserWidget 클래스를 검색하여 생성합니다.
+
+<br><br>
