Edit Score UI Post

--- a/_posts/UE4_TopDownShooting/2023-08-10-ScoreUI.md
+++ b/_posts/UE4_TopDownShooting/2023-08-10-ScoreUI.md
@@ -103,20 +103,22 @@ void ABullet::OnBulletOverlapEnemy(UPrimitiveComponent* OverlappedComponent, AAc
 
 UMG의 핵심에 Widget이라는 것이 있는데, 이는 미리 만들어진 (버튼, 체크박스, 슬라이더, 진행상황 바 등의) 함수 시리즈로, 이들을 조립해서 UI를 만들 수 있습니다. 이러한 위젯은 전용 Widget Blueprint (위젯 블루프린트)에서 편집됩니다.
 
-UMG 기능은 블루프린트 모듈로 따로 분리되어 있어 C++ 코드에서 사용하기 위해 모듈을 등록해야 합니다. 비주얼 스튜디오 솔루션 탐색기에서 프로젝트이름.build.cs 파일을 열어 UMG 모듈을 추가해 줍니다.
+UMG 기능은 블루프린트 모듈로 따로 분리되어 있어 C++ 코드에서 사용하기 위해 모듈을 등록해야 합니다. 비주얼 스튜디오 솔루션 탐색기에서 프로젝트이름.Build.cs 파일을 열어 UMG 모듈을 추가해 줍니다.
 
 💡모듈
 <br>
 엔진은 대규모 모듈 모음으로 구현되며 게임은 모듈을 보강하기 위해 자체 모듈을 제공합니다. 각 모듈은 일련의 기능을 캡슐화하고 다른 모듈에서 사용할 공용 인터페이스 및 컴파일 환경을 제공할 수 있습니다.
 <br><br>
-모듈은 확장자가 .build.cs인 C# 소스 파일을 통해 선언되며 프로젝트의 소스 디렉터리 아래에 저장됩니다. 모듈에 속하는 C++ 소스 코드는 .build.cs 파일 옆이나 하위 디렉토리에 저장됩니다.
+모듈은 확장자가 .Build.cs인 C# 소스 파일을 통해 선언되며 프로젝트의 소스 디렉터리 아래에 저장됩니다. 모듈에 속하는 C++ 소스 코드는 .Build.cs 파일 옆이나 하위 디렉토리에 저장됩니다.
 <br><br>
-각 .build.cs 파일은 ModuleRules 기본 클래스에서 파생되는 클래스를 선언하고 생성자에서 빌드해야 하는 방법을 제어하는 ​​속성을 설정합니다. 이 .build.cs 파일은 UnrealBuildTool에 의해 컴파일되고 전체 컴파일 환경을 결정하도록 구성됩니다.
+각 .Build.cs 파일은 ModuleRules 기본 클래스에서 파생되는 클래스를 선언하고 생성자에서 빌드해야 하는 방법을 제어하는 ​​속성을 설정합니다. 이 .Build.cs 파일은 UnrealBuildTool에 의해 컴파일되고 전체 컴파일 환경을 결정하도록 구성됩니다.
 {: .notice--warning}
 
 PublicDependencyModuleNames는 외부 모듈 파일을 프로젝트에 포함시키는 속성입니다.
 
 ```cpp
+// ShootingSample.Build.cs
+
 // Copyright Epic Games, Inc. All Rights Reserved.
 
 using UnrealBuildTool;
@@ -138,5 +140,40 @@ public class ShootingSample : ModuleRules
 
 ### ⚙️UserWidget 클래스 생성
 점수가 누적되는 것을 게임 화면에서 보기 위해 UI 위젯을 제작합니다. UI를 만들기 위해 부모 클래스는 위젯 베이스 클래스인 UserWidget 클래스가 필요합니다. 클래스 생성 버튼을 눌러 UserWidget 클래스를 검색하여 생성합니다.
+
+UserWidget 클래스를 생성했다면 헤더파일에 텍스트 블록 변수를 선언합니다. 점수 문구를 적을 텍스트 블록과 실제 점수를 표시할 텍스트 블록 두 개를 선언해줍니다. UPROPERTY 옵션 중 meta 옵션은 메타데이터 지정자 옵션입니다. 코드를 통해 언리얼 에디터에 대한 제어를 할 때 사용합니다. 에디터에 변수를 노출실킬 때 코드와 이름을 다르게 하거나 변수 입력 값을 특정 범위로 제한하는 등 다양한 기능들을 사용할 수 있습니다.
+
+```cpp
+// MainWidget.h
+
+#pragma once
+
+#include "CoreMinimal.h"
+#include "Blueprint/UserWidget.h"
+#include "MainWidget.generated.h"
+
+/**
+ * 
+ */
+UCLASS()
+class SHOOTINGSAMPLE_API UMainWidget : public UUserWidget
+{
+	GENERATED_BODY()
+	
+public:
+	UPROPERTY(EditAnywhere, meta = (BindWidget))
+	class UTextBlock* scoreText;
+
+	UPROPERTY(EditAnywhere, meta = (BindWidget))
+	class UTextBlock* scoreData;
+};
+
+```
+
+<br>
+
+BindWidget 지정자는 C++ 코드에서 만든 위젯 관련 변수를 위젯 블루프린트와 연동하는 역할을 합니다. 또한 코드에서 변경된 값이 위젯 블루프린트에도 반영되게 하는 역할도 합니다. BindWidget 지정자가 있는 변수는 해당 클래스를 상속한 위젯 블루프린트에서 반드시 구현해야합니다. 변수에 해당하는 위젯 컴포넌트를 구현하지 않으면 컴파일 에러가 발생합니다.
+
+MainWidget 클래스를 부모 클래스로 하는 블루프린트 위젯을 생성합니다.
 
 <br><br>
