Edit ScoreUI Post

--- a/_posts/UE4_TopDownShooting/2023-08-10-ScoreUI.md
+++ b/_posts/UE4_TopDownShooting/2023-08-10-ScoreUI.md
@@ -174,6 +174,148 @@ public:
 
 BindWidget 지정자는 C++ 코드에서 만든 위젯 관련 변수를 위젯 블루프린트와 연동하는 역할을 합니다. 또한 코드에서 변경된 값이 위젯 블루프린트에도 반영되게 하는 역할도 합니다. BindWidget 지정자가 있는 변수는 해당 클래스를 상속한 위젯 블루프린트에서 반드시 구현해야합니다. 변수에 해당하는 위젯 컴포넌트를 구현하지 않으면 컴파일 에러가 발생합니다.
 
-MainWidget 클래스를 부모 클래스로 하는 블루프린트 위젯을 생성합니다.
+MainWidget 클래스를 부모 클래스로 하는 블루프린트 위젯을 생성합니다. 위젯 블루프린트를 열어보면 컴파일러 경고를 확인할 수 있습니다. scoreText와 scoreData에 해당하는 텍스트 블록들이 존재하지 않기 때문입니다.
+
+텍스트 블록을 배치하기 전에 Canvas Panel 위젯을 먼저 배치하고 Canvas Panel의 자식으로 텍스트 위젯을 등록합니다. 텍스트 위젯의 이름은 코드에서 만든 변수와 동일하게 변경해줘야 합니다.
+
+![TextBlock](/assets/images/2DShooting/TextBlock.png){: width="250" height="250"}
+
+<br><br>
+
+### ⚙️점수를 위젯에 반영
+게임 모드 베이스에서 현재 점수를 위젯의 텍스트 블록에 전달해주기 위해 게임 모드 베이스에서 위젯 블루프린트에 접근해야 합니다. 따라서 게임 모드 베이스 헤더파일에 위젯 블루프린트 변수를 선언합니다.
+
+점수 UI는 게임이 시작하자마자 생성되어야 하기 때문에 BeginPlay() 함수에 기능을 구현하면 될 것 같습니다. 하지만 액터 클래스와 달리 게임 모드 베이스 클래스에는 BeginPlay() 함수가 구현되어 있지 않아 직접 만들어줘야 합니다. 게임 모드 베이스 클래스는 액터 클래스를 상속받아 파생된 클래스라서 부모 클래스로부터 BeginPlay() 함수를 받아와서 재정의 해줄 수 있습니다.
+
+블루프린트를 뷰 포트에 생성하려면 메모리에 생성해서 로드하는 과정이 필요합니다. 위젯 블루프린트를 메모리에 생성했다면 해당 위젯에 접근해서 제어하기 위해 실제 생성된 위제을 저장해 놓을 변수가 필요합니다.
+
+```cpp
+// ShootingSampleGameModeBase.h
+
+#pragma once
+
+#include "CoreMinimal.h"
+#include "GameFramework/GameModeBase.h"
+#include "ShootingSampleGameModeBase.generated.h"
+
+/**
+ * 
+ */
+UCLASS()
+class SHOOTINGSAMPLE_API AShootingSampleGameModeBase : public AGameModeBase
+{
+	GENERATED_BODY()
+
+public:
+	void AddScore(int32 point);
+
+	UPROPERTY(EditAnywhere)
+	TSubclassOf<class UMainWidget> mainWidget;
+
+protected:
+	virtual void BeginPlay() override;
+	
+private:
+	int32 currentScore = 0;
+    
+	// 뷰 포트에 로드된 위젯 저장 변수
+	class UMainWidget* mainUI;
+};
+```
+
+<br>
+
+선언이 끝났으면 소스파일로 이동해서 BeginPlay() 함수에 UI를 뷰 포트에 출력하는 기능을 구현합니다. CreateWidget<T>() 함수를 이용하여 위젯 변수에 할당된 블루프린트 파일을 메모리에 생성합니다.
+
+```cpp
+// ShootingSampleGameModeBase.cpp
+
+#include "ShootingSampleGameModeBase.h"
+#include "Blueprint/UserWidget.h"
+#include "MainWidget.h"
+
+void AShootingSampleGameModeBase::BeginPlay()
+{
+	Super::BeginPlay();
+
+	if (mainWidget != nullptr)
+	{
+		// 위젯 블루프린트 파일을 메모리에 로드
+		mainUI = CreateWidget<UMainWidget>(GetWorld(), mainWidget);
+
+		// 위젯이 메모리에 로드되면 뷰 포트에 출력
+		if (mainUI != nullptr)
+		{
+			mainUI->AddToViewport();
+		}
+	}
+}
+```
+
+<br>
+
+코드를 빌드하고 게임 모드 베이스 블루프린트의 설정에서 Main Widget 변수에 위젯 블루프린트를 할당합니다.
+
+![SetBPwidget](/assets/images/2DShooting/SetBPwidget.png){: width="350" height="350"}
+
+<br>
+
+적을 처치할 때 마다 점수가 누적되는 것을 반영하기 위해 게임 모드 베이스 헤더파일에 점수를 출력하는 함수를 구현합니다. currentScore 변수의 값을 위젯 블루프린트에 있는 scoreData에 입력하는 기능을 구현할 함수입니다.
+
+```cpp
+// ShootingSampleGameModeBase.h
+
+...생략
+
+UCLASS()
+class SHOOTINGSAMPLE_API AShootingSampleGameModeBase : public AGameModeBase
+{
+	GENERATED_BODY()
+
+public:
+	void AddScore(int32 point);
+
+	UPROPERTY(EditAnywhere)
+	TSubclassOf<class UMainWidget> mainWidget;
+
+protected:
+	virtual void BeginPlay() override;
+	
+private:
+	int32 currentScore = 0;
+
+	class UMainWidget* mainUI;
+
+	void PrintScore();
+};
+```
+
+<br>
+
+소스파일에서 PrintScore() 함수를 구현합니다. mainUI 포인터 변수를 이용하면 UMainWidget 클래스의 멤버변수인 scoreData에 접근할 수 있습니다. 그리고 SetText() 함수를 사용하여 scoreData 변수에 텍스트 값을 넣도록 합니다.
+
+하지만 currentScore는 정수형 변수이기 때문에 SetText() 함수의 매개변수로 전달할 수 없습니다. SetText() 함수는 FText형 변수를 매개변수로 전달해야하기 때문입니다. 따라서 FText 클래스의 멤버함수 AsNumber를 사용하여 형 변환을 한 다음 점수를 전달합니다.
+
+```cpp
+
+...생략
+
+void AShootingSampleGameModeBase::PrintScore()
+{
+	if (mainUI != nullptr)
+	{
+		mainUI->scoreData->SetText(FText::AsNumber(currentScore));
+	}
+}
+
+void AShootingSampleGameModeBase::AddScore(int32 point)
+{
+	currentScore += point;
+
+	// AddScore() 함수가 실행될 때마다 점수 반영
+	PrintScore();
+}
+
+```
 
 <br><br>
