Edit Category Name

--- a/_posts/UE4_TopDownShooting/2023-08-10-ScoreUI.md
+++ b/_posts/UE4_TopDownShooting/2023-08-10-ScoreUI.md
@@ -3,7 +3,7 @@ title: "[UE4]점수 UI 제작"
 excerpt: "2D Shooting - 점수 UI 제작"
 
 categories:
-  - 2D_Shooting
+  - TopDown_Shooting
 tags:
   - [UE4, 탑다운 2D 슈팅 게임, UI]
 
