--- a/_posts/Reviews/2023-12-21-COMP3200.md
+++ b/_posts/Reviews/2023-12-21-COMP3200.md
@@ -22,7 +22,7 @@ date: 2023-12-25
 <br>
 ([PopeTV](https://www.youtube.com/@PopeTV)를 모르시는 분들은 한 번 찾아보시길 추천드린다.)
 
-여러 후기들을 찾아보니 꽤 괜찮은 교육 기관이라고 생각되었고 PopeTV를 통해 포프님의 교육 철학과 실무 경력에 대해 알고 있었기 때문에 POCU 아카데미를 신뢰할 수 있었다. 하지만 개인적으로 POCU 아카데미의 수강 가격(풀코스)이 저렴한 편은 아니라고 생각해서 계속 시작을 주저하기만 했다. 언젠가 여유가 되면 POCU에서 수업을 들어봐야 겠다는 생각만 막연히 가지고 있었다.
+여러 후기들을 찾아보니 꽤 괜찮은 교육 기관이라고 생각되었고 PopeTV를 통해 포프님의 교육 철학과 실무 경력에 대해 알고 있었기 때문에 POCU 아카데미를 신뢰할 수 있었다. 하지만 개인적으로 POCU 아카데미의 수강 가격(풀코스)이 저렴한 편은 아니라고 생각해서 계속 시작을 주저하기만 했다. 언젠가 여유가 되면 POCU에서 수업을 들어봐야겠다는 생각만 막연히 가지고 있었다.
 
 그러다가 시간은 흐르는데 실력은 제자리인 것 같아 POCU에서 제대로 C++를 배워보고 싶다는 생각이 들었고 앞뒤 따지지 않고 COMP3200 C++ 언매니지드 프로그래밍을 신청했다.
 
@@ -61,7 +61,7 @@ date: 2023-12-25
 
 * 슬랙 사용: 모르는 것이 있을 때 바로바로 물어볼 수 있다. 실습과 과제 제출 기한이 지나고 코드 공유를 통해 동료들의 코드를 볼 수 있어서 좋다.
 
-* 강제성: 비싼 비용으로 인해 공부를 안 할 수가 없다.
+* 강제성: 비싼 비용으로 인해 공부를 안 할 수가 없다. 주 단위로 실습이 주어지고 3주 마다 과제가 있기 때문에 코딩을 하기 싫어도 해야 해서 좋았다.
 
 * 짧은 강의 영상: 한 강의에 20분 이내로 구성되어 있어 집중력을 잃지 않고 강의 하나에 온전히 몰입할 수 있어서 좋았다. 강의를 다시 볼 때도 부담이 없어서 좋았던 부분이다.
 
