Edit COMP3200 Review

--- a/_posts/Reviews/2023-12-21-COMP3200.md
+++ b/_posts/Reviews/2023-12-21-COMP3200.md
@@ -57,7 +57,7 @@ date: 2023-12-25
 
 ### 😁장점
 
-* 빌드봇: POCU 아카데미의 근간이라고 생각한다. 실습과 과제에 대해 실시간으로 피드백을 제공해준다.
+* 빌드봇: POCU 아카데미의 근간이라고 생각한다. 실습과 과제에 대해 실시간으로 피드백을 제공해준다. 사소한 코딩 스타일 부터 생각하지 못한 디테일한 부분까지 코드를 모두 채점해준다.
 
 * 슬랙 사용: 모르는 것이 있을 때 바로바로 물어볼 수 있다. 실습과 과제 제출 기한이 지나고 코드 공유를 통해 동료들의 코드를 볼 수 있어서 좋다.
 
