Edit COMP3200 Review

--- a/_posts/Reviews/2023-12-21-COMP3200.md
+++ b/_posts/Reviews/2023-12-21-COMP3200.md
@@ -13,18 +13,18 @@ toc_sticky: true
 date: 2023-12-25
 ---
 
-## 🏫POCU
+## 🏫POCU를 선택한 이유
 **기본기를 제대로 배우고 싶지만 어디서 어떻게 시작해야할지 모르겠다면 POCU를 추천한다!**
 
-우선 필자는 이십대 후반에 프로그래밍에 입문해서 현재 게임 클라이언트 프로그래머로 전향을 원하는 프로그래머 지망생이다. 나이를 걱정하는 20대 분들에게 본인이 절대 늦지 않았음을 알려주고 싶다.
+우선 필자는 20대 후반에 프로그래밍에 입문해서 30대 초반인 현재까지 게임 클라이언트 프로그래머로 전향을 원하는 비전공자 프로그래머 지망생이다. 나이를 걱정하는 20대 분들에게 본인이 절대 늦지 않았음을 알려주고 싶다.
 
 프로그래밍을 공부하면서 우연히 PopeTV를 알게 되었고 프로그래머라면 어떻게 성장해야 하는지 또는 어떤 식으로 일해야 하는지에 대한 것을 포프님의 영상을 보고 많이 배우고 생각하게 되었다. 그러다가 포프님이 POCU 아카데미라는 교육 기관을 운영한다는 것을 알게 되었고 자연스레 아카데미의 교육 과정에 관심이 가기 시작했다.
 <br>
 ([PopeTV](https://www.youtube.com/@PopeTV)를 모르시는 분들은 한 번 찾아보시길 추천드린다.)
 
-여러 후기들을 찾아보니 꽤 괜찮은 교육 기관이라고 생각되었고 PopeTV를 통해 포프님의 교육 철학과 실무 경력에 대해 알고 있었기 때문에 POCU 아카데미를 신뢰할 수 있었다. 하지만 개인적으로 POCU 아카데미의 수강 가격(풀코스)이 저렴한 편은 아니라고 생각해서 계속 시작을 주저하기만 했다. 언젠가 여유가 되면 POCU에서 수업을 들어봐야겠다는 생각만 막연히 가지고 있었다.
+POCU 아카데미에 대해 알아보니 일반 대학과 비교해서 전혀 뒤처지지 않는 커리큘럼을 운영하고(아직 모든 과목이 개설된 것은 아니다.🥲) 대학에서 배울 수 없는 과목(어셈블리 프로그래밍)도 개설되어 있어서 필자 본인에게 꽤 괜찮은 교육 기관이라고 생각되었다. 그리고 무엇보다 PopeTV를 통해 포프님의 교육 철학과 실무 경력에 대해 알고 있었기 때문에 POCU 아카데미를 신뢰할 수 있었다.
 
-그러다가 시간은 흐르는데 실력은 제자리인 것 같아 POCU에서 제대로 C++를 배워보고 싶다는 생각이 들었고 앞뒤 따지지 않고 COMP3200 C++ 언매니지드 프로그래밍을 신청했다.
+하지만 개인적으로 POCU 아카데미의 수강 가격(풀코스)이 저렴한 편은 아니라고 생각해서 계속 시작을 주저하기만 했다. 언젠가 여유가 되면 POCU에서 수업을 들어봐야겠다는 생각만 막연히 가지고 있었다. 그러다가 시간은 흐르는데 실력은 제자리인 것 같아 POCU에서 제대로 C++를 배워보고 싶다는 생각이 들었고 앞뒤 따지지 않고 실력 향상이라면 뭐든지 해봐야겠다는 생각에 COMP3200 C++ 언매니지드 프로그래밍을 신청했다.
 
 <br><br>
 
