Edit TopDownDrive Movement

--- a/_posts/Unity_TopDownDrive/2024-01-08-Movement.md
+++ b/_posts/Unity_TopDownDrive/2024-01-08-Movement.md
@@ -21,6 +21,36 @@ date: 2024-01-09
 
 오브젝트를 회전시키거나 이동 시키는 것은 Transform 컴포넌트와 관련이 있다.
 
+그 중에서 오브젝트의 회전에 관련된 것은 Transform의 Rotation과 관련이 있다.
+
+```cs
+public class Driver : MonoBehaviour
+{
+    // Start is called before the first frame update
+    void Start()
+    {
+        
+    }
+
+    // Update is called once per frame
+    void Update()
+    {
+        transform.Rotate(0, 0, 0.1f);   // (x, y, z)
+    }
+}
+```
+
+스크립트를 저장하고 유니티 엔진으로 돌아와서 스크립트를 적용할 오브젝트를 선택한다.
+
+스크립트 파일을 해당 오브젝트의 컴포넌트로 적용시키기 위해 스크립트 파일을 오브젝트의 Inspector 창에 드래그 앤 드랍 해준다.
+
+프로젝트를 실행시키면 오브젝트가 z축 기준으로 0.1도 씩 매 프레임마다 회전하는 것을 확인할 수 있다.
+
+<br>
+
+### ⚙️이동
+오브젝트의 회전에 관련된 것은 Transform의 Translate과 관련이 있다.
+
 ```cs
 public class Driver : MonoBehaviour
 {
@@ -34,16 +64,12 @@ public class Driver : MonoBehaviour
     void Update()
     {
         transform.Rotate(0, 0, 0.1f);
+        transform.Translate(0, 1, 0);
     }
 }
 ```
 
-오브젝트가 z축 기준으로 0.1도 씩 매 프레임마다 돌아가는 것을 확인할 수 있다.
-
-<br>
-
-### ⚙️이동
-
+프로젝트를 실행시키면 매 프레임 마다 오브젝트가 y축으로 1만큼 이동하는 것을 확인할 수 있다.
 
 <br>
 
