Edit TopDownDrive Movement Post

--- a/_posts/Unity_TopDownDrive/2024-01-08-Movement.md
+++ b/_posts/Unity_TopDownDrive/2024-01-08-Movement.md
@@ -1,6 +1,6 @@
 ---
-title: "[Unity]이동"
-excerpt: "TopDown Drive - 이동"
+title: "[Unity]오브젝트 이동"
+excerpt: "TopDown Drive - 오브젝트 이동"
 
 categories:
   - TopDownDrive
@@ -13,7 +13,7 @@ toc_sticky: true
 date: 2024-01-09
 ---
 
-## 🎮이동
+## 🎮오브젝트 이동
 ### ⚙️회전
 우선 캡슐 오브젝트를 Scene에 배치하고 이것을 회전 시켜보자.
 
@@ -69,7 +69,7 @@ public class Driver : MonoBehaviour
 }
 ```
 
-프로젝트를 실행시키면 매 프레임 마다 오브젝트가 y축으로 1만큼 이동하는 것을 확인할 수 있다.
+스크립트를 저장하고 프로젝트를 실행시키면 매 프레임 마다 오브젝트가 y축으로 1만큼 이동하는 것을 확인할 수 있다.
 
 <br>
 
