Edit XORSwap Post

--- a/_posts/Algorithm_Implementation/2024-01-12-XORSwap.md
+++ b/_posts/Algorithm_Implementation/2024-01-12-XORSwap.md
@@ -26,7 +26,7 @@ b = 4_{(10)} = 100_{(2)}
 \end{gather}
 $$
 
-이 두 수에 세 개의 XOR 연산을 사용하여 서로 교환할 수 있다.
+이 두 수에 세 개의 XOR 연산을 사용하여 서로 교환할 수 있다. (XOR 연산은 두 비트가 서로 같으면 0, 다르면 1이 결과가 되는 연산이다.)
 
 $$
 \begin{gather}
