Edit XORSwap Post

--- a/_posts/Algorithm_Implementation/2024-01-12-XORSwap.md
+++ b/_posts/Algorithm_Implementation/2024-01-12-XORSwap.md
@@ -66,20 +66,24 @@ int main()
 
 XORSwap() 함수에 같은 주소를 가리키는 변수(예를 들어, a와 a)를 넘겨준다고 했을 때, a의 값이 0이 되어버린다.
 
+XORSwap의 매개변수 a와 b는 같은 주소를 가리키고 있어서 a가 0이 되면 b도 0이 된다. 그렇게 a의 값이 0으로 바뀌어 버리는 문제가 생긴다.
+
 $$
+\begin{gather}
 a = a \oplus b = 011_{(2)} \oplus 011_{(2)} = 000_{(2)} \\
 b = a \oplus b = 000_{(2)} \oplus 000_{(2)} = 000_{(2)} \\
 a = a \oplus b = 000_{(2)} \oplus 000_{(2)} = 000_{(2)}
+\end{gather}
 $$
-
-XORSwap의 매개변수 a와 b는 같은 주소를 가리키고 있어서 a가 0이 되면서 b도 0이 된다. 그렇게 a의 값이 0으로 바뀌어 버리는 문제가 생긴다.
 
 값은 같지만 서로 다른 주소를 가리키는 두 변수를 교환하는 것은 문제가 되지 않는다. a가 0이 되더라도 b는 0이 되지 않으므로 a가 다시 원래 값으로 되돌아간다.
 
 $$
+\begin{gather}
 a = a \oplus b = 011_{(2)} \oplus 011_{(2)} = 000_{(2)} \\
 b = a \oplus b = 000_{(2)} \oplus 011_{(2)} = 011_{(2)} \\
 a = a \oplus b = 000_{(2)} \oplus 011_{(2)} = 011_{(2)}
+\end{gather}
 $$
 
 따라서 교환할 숫자가 0이 되지 않기 위해 XORSwap()에 주소가 같은 인자가 들어가지 않도록 예외를 처리해줘야 한다.
