Edit XORSwap Post

--- a/_posts/Algorithm_Implementation/2024-01-12-XORSwap.md
+++ b/_posts/Algorithm_Implementation/2024-01-12-XORSwap.md
@@ -76,7 +76,9 @@ a = a \oplus b = 000_{(2)} \oplus 000_{(2)} = 000_{(2)}
 \end{gather}
 $$
 
-값은 같지만 서로 다른 주소를 가리키는 두 변수를 교환하는 것은 문제가 되지 않는다. a가 0이 되더라도 b는 0이 되지 않으므로 a가 다시 원래 값으로 되돌아간다.
+<br>
+
+반면에 값은 같지만 서로 다른 주소를 가리키는 두 변수를 교환하는 것은 문제가 되지 않는다. a가 0이 되더라도 b는 0이 되지 않으므로 a가 다시 원래 값으로 되돌아간다.
 
 $$
 \begin{gather}
